src/test/LambdaErrors/LambdaErrors.expected
error: LambdaErrors.panda:13:11: lambda type cannot be determined from context
error: LambdaErrors.panda:14:30: unknown identifier
error: LambdaErrors.panda:15:1: no match found for method test1(<lambda>)
    possible error in lambda at LambdaErrors.panda:15:7:
        when interpreted as (panda.core.Int32)=>(...):
            unknown identifier at LambdaErrors.panda:15:13
error: LambdaErrors.panda:16:1: no match found for method test2(<lambda>)
    possible error in lambda at LambdaErrors.panda:16:7:
        when interpreted as (panda.core.Int32)=>(...):
            no match found for method startsWith(panda.core.String) at LambdaErrors.panda:16:12
        when interpreted as (panda.core.String)=>(...):
            lambda evaluated to 'panda.core.Bit', which cannot be used where 'panda.core.Real64' is expected
4 errors
