src/test/LambdaErrors/LambdaErrors.panda
method test1(f:(Int)=>(Real)) {
}

method test1(f:(Int)=>(String)) {
}

method test2(f:(Int)=>(Real)) {
}

method test2(f:(String)=>(Real)) {
}

def f1 := x => x * 2
def f2:(Int)=>(Int) := x => x.broken
test1(x => x.broken)
test2(x => x.startsWith("Hello"))